--- a/peluqueria-frontend/src/App.css
+++ b/peluqueria-frontend/src/App.css
@@ -1,4 +1,3 @@
-
 /* Tus estilos personalizados */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -33,7 +32,6 @@ body {
   min-height: 100vh;
   width: 100%; /* Asegura que el body ocupe el 100% del ancho */
 }
-
 
 h1 {
   font-size: 3.2em;
@@ -70,4 +68,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.text-shadow {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Aumentar la opacidad de la sombra para mayor contraste */
 }
