--- a/peluqueria-frontend/src/styles/global.css
+++ b/peluqueria-frontend/src/styles/global.css
@@ -41,5 +41,11 @@ body {
       top: 42% !important; /* Ajuste más alto para móviles */
     }
   }
+
+  @media (max-width: 767px) {
+    .uñas-text {
+      top: 42% !important; /* Ajuste más alto para móviles */
+    }
+  }
   
   
