--- a/peluqueria-frontend/src/styles/global.css
+++ b/peluqueria-frontend/src/styles/global.css
@@ -36,6 +36,29 @@ form {
   flex-direction: column;
 }
 
+section {
+  display:flex;
+  width: 900px;
+  height: 450px;
+  margin: 0 auto;
+}
+
+section img{
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .8;
+  transition: .5s ease;
+}
+
+section img:hover {
+  cursor: crosshair;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
+
 input,
 textarea {
   margin: 10px 0;
