--- a/peluqueria-frontend/src/styles/global.css
+++ b/peluqueria-frontend/src/styles/global.css
@@ -10,27 +10,16 @@ body {
   padding: 0;
   background-color: #f8f8f8;
 }
+
 @layer components {
-  custom-h1 {
+  .custom-h1 {
     font-family: "Poppins", Helvetica, Arial, Lucida, sans-serif; /* Fuente personalizada */
     font-weight: 50; /* Peso de la fuente */
     font-size: 50px; /* Tamaño de fuente */
     color: #9e8484;
     text-align: center; /* Alineación */
   }
-}
-@media (max-width: 768px) {
-  .custom-h1 {
-    font-size: 38px; /* Tamaño para pantallas pequeñas */
-  }
-}
 
-@media (max-width: 480px) {
-  .custom-h1 {
-    font-size: 32px; /*Tamaño para pantallas muy pequeñas */
-  }
-}
-@layer components {
   .custom-h2 {
     font-family: "Playfair Display", serif;
     font-size: 1.75rem; /* Ajusta el tamaño para que sea menor que el h1 */
@@ -58,18 +47,18 @@ form {
 }
 
 section {
-  display:flex;
+  display: flex;
   width: 900px;
   height: 450px;
   margin: 0 auto;
 }
 
-section img{
+section img {
   width: 0px;
   flex-grow: 1;
   object-fit: cover;
-  opacity: .8;
-  transition: .5s ease;
+  opacity: 0.8;
+  transition: 0.5s ease;
 }
 
 section img:hover {
@@ -78,7 +67,6 @@ section img:hover {
   opacity: 1;
   filter: contrast(120%);
 }
-
 
 input,
 textarea {
@@ -100,18 +88,6 @@ button:hover {
 }
 
 .card-media {
-  height: 237.033;
+  height: 237.033px; /* Se añadió px */
   object-fit: cover;
-}
-
-@layer components {
-  .peluqueria-text {
-    @apply text-base leading-6 text-gray-800;
-  }
-
-  .peluqueria-text-extended {
-    text-align: justify;
-    font-size: 1.2rem;
-    line-height: 1.5;
-  }
 }
