--- a/peluqueria-frontend/src/styles/global.css
+++ b/peluqueria-frontend/src/styles/global.css
@@ -130,3 +130,37 @@ button:hover {
   line-height: 1.3; /* Ajusta el valor según tus preferencias */
   margin-bottom: 0.8rem;
 }
+
+/* Para el submenú en pantallas pequeñas */
+@media (max-width: 768px) {
+  .sub-menu {
+    position: relative;
+    background-color: white;
+    padding: 8px;
+    border-radius: 8px;
+  }
+
+  .sub-menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .sub-menu li {
+    padding: 8px 16px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .sub-menu li:last-child {
+    border-bottom: none;
+  }
+
+  .sub-menu a {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+svg {
+  fill: black !important; /* Asegura que todos los iconos sean negros */
+}
